--- a/Frontend/Web/src/HomePage/CategoriesSection/CategoriesSection.module.css
+++ b/Frontend/Web/src/HomePage/CategoriesSection/CategoriesSection.module.css
@@ -19,16 +19,19 @@
   width: calc((100% - 120px));
   /* background-color: aqua; */
   max-width: 2000px;
+  
 }
 
 .outer-container {
   margin: auto;
   width: calc((100% - 60px));
+  
 }
 
 .container{
   width: 90%;
   margin: auto;
+  margin-bottom: 50px;
 }
 
 a {
@@ -59,6 +62,7 @@ a {
   gap: 20px;
   margin-top: 20px;
   flex-wrap: wrap;
+  
 }
 
 .viewContent a {
